Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(text var)
    end
end
